fix borders and align text to bottom

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,10 +2,19 @@
     background-color: white;
     height: 60px;
     width: 100%;
-    border-top: 1px #cccccc;
+    border-top: 1px solid #cccccc;
     display: flex;
     justify-content: center;
     align-items: center;
-    vertical-align: middle;
     position: fixed;
+}
+
+footer {
+    position: fixed;
+    text-align: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: translateX(-50);
+    height: 30px;
 }
